Fix layout bugs and improve accessibility

--- a/styles/2018.scss
+++ b/styles/2018.scss
@@ -84,12 +84,16 @@ body > header {
   }
 }
 
-body > main {
+#main-header {
+  h1 {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+main {
   padding: 0;
   margin: 0;
-  > h1 {
-    display: none;
-  }
   hr {
     border: 0;
     border-bottom: 5px solid $blue;
@@ -191,7 +195,8 @@ section.tweets {
   margin: 2rem 0;
   padding: 2rem;
   @media (min-width: $desktop-width) {
-    padding: 4rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   a {
@@ -248,7 +253,7 @@ section.tweets {
         }
       }
 
-      h3 {
+      .participant-name {
         font-size: 18px;
         font-weight: $thin-weight;
         margin: 0 0 0 0.5rem;
@@ -261,7 +266,7 @@ section.tweets {
         display: none;
       }
 
-      nav a {
+      .participant-links a {
         text-decoration: none;
         font-size: 150%;
         &+a {
